--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,9 @@
   --prices-background: #111319;
   --cont-background: #f7f7f7;
   --total-white: #ffffff;
+  --grey-transparency: #9da4bd1f;
+
+  --bg-gradient: linear-gradient(rgba(25, 28, 38, 0.2), rgba(25, 28, 38, 0.2));
 }
 /*======== GENERAL ========*/
 body {
@@ -96,8 +99,16 @@ img {
   font-size: 11px;
   line-height: calc(15 / 11);
   text-transform: uppercase;
+  display: flex;
+  align-items: center;
+  gap: 20px;
 }
-
+.suptitle::before {
+  content: "";
+  width: 60px;
+  height: 1px;
+  background-color: currentColor;
+}
 .social-link {
   font-weight: 600;
   font-size: 11px;
@@ -114,8 +125,8 @@ img {
 .header {
   padding-top: 32px;
   padding-bottom: 32px;
-  background-color: var(--total-white); 
-  background-color: var(--grey-text);  
+  background-color: var(--total-white);
+  background-color: var(--grey-text);
 }
 .header-container {
   display: flex;
@@ -127,7 +138,6 @@ img {
 .nav-list {
   display: flex;
   gap: 30px;
-  
 }
 .header-phone {
   margin-left: auto;
@@ -135,7 +145,6 @@ img {
 }
 .header-btn {
   color: var(--total-white);
-  
 }
 
 .header-link {
@@ -147,7 +156,7 @@ img {
   letter-spacing: 0.1em;
   color: var(--total-white);
 }
-.header-link:is(:hover, :focus)  {
+.header-link:is(:hover, :focus) {
   color: var(--accent);
 }
 
@@ -156,7 +165,6 @@ img {
 }
 .hero-container {
   display: flex;
-  
 }
 .left-side {
   width: 100px;
@@ -164,8 +172,12 @@ img {
 .hero-social {
 }
 .hero-content {
-  padding: 272px 100px 208px;
+  padding: 272px 100px 208px 100px;
   background-color: var(--hero-background);
+  background-image: var(--bg-gradient), url(../images/slider-img3.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
   flex-grow: 1;
 }
 .hero-suptitle {
@@ -227,6 +239,12 @@ img {
 /*======== PRICES ========*/
 .prices {
   background-color: var(--prices-background);
+  background-image: url(../images/prices-bg.png);
+  max-width: 1600px;
+  margin: 0 auto;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 .prices-suptitle {
   margin-bottom: 20px;
@@ -242,24 +260,48 @@ img {
   gap: 30px;
   margin-bottom: 44px;
 }
+
 .price-list {
   width: calc((100% - 30px) / 2);
   padding: 30px 20px;
-  outline: 1px solid white;
+}
+.price-list:first-child {
+  background-image: linear-gradient(
+    180deg,
+    #171a24 0%,
+    rgba(23, 26, 36, 0.2) 100%
+  );
+}
+.price-list:last-child {
+  background-image: linear-gradient(
+    180deg,
+    #090b13 0%,
+    rgba(9, 11, 19, 0.2) 100%
+  );
 }
 .price-item {
   display: flex;
+  gap: 12px;
   justify-content: space-between;
+  align-items: baseline;
   margin-bottom: 20px;
 }
 .price-item:last-child {
   margin-bottom: 0;
 }
+.price-item::before {
+  content: "";
+  width: 100px;
+  height: 1px;
+  flex-grow: 1;
+  background-color: var(--grey-transparency);
+}
 .price-text {
+  order: -1;
   color: var(--grey-text);
 }
 .price-price {
-  color: var(--grey-text); 
+  color: var(--grey-text);
 }
 .prices-btn {
   margin: 0 auto;
@@ -273,6 +315,25 @@ img {
 }
 .why-container {
   display: flex;
+  padding-left: 85px;
+  padding-right: 115px;
+  gap: 130px;
+}
+.why-list {
+  display: flex;
+  flex-wrap: wrap;
+  width: 370px;
+}
+.why-item {
+  width: 170px;
+  height: 133px;
+  padding: 20px 24px;
+  text-align: center;
+  background-color: var(--cont-background);
+}
+.why-item:nth-child(even) {
+  margin-top: 35px;
+  margin-left: 30px;
 }
 .count {
   font-weight: 700;
@@ -282,15 +343,25 @@ img {
   letter-spacing: 0.05em;
   color: var(--title-color);
 }
+.count::after {
+  content: "+";
+  font-weight: 600;
+  font-size: 16px;
+  line-height: calc(22 / 16);
+  vertical-align: top;
+  color: transparent;
+  text-shadow: 0 8px 0 var(--accent);
+}
 .count + p {
+  padding-top: 6px;
   font-weight: 600;
   font-size: 11px;
   line-height: calc(15 / 11);
   letter-spacing: normal;
-  /* text-align: center; */
   color: var(--title-color);
 }
 .why-suptitle {
+  margin-top: 9px;
   margin-bottom: 20px;
   color: var(--title-color);
   letter-spacing: normal;
@@ -324,25 +395,50 @@ img {
 .barbers-item {
   flex-basis: calc((100% - 60px) / 3);
 }
+.barbers-info {
+  padding-top: 30px;
+}
 .barbers-name {
   margin-bottom: 8px;
   font-weight: 400;
   font-size: 18px;
   line-height: calc(25 / 18);
-  text-align: center; 
+  text-align: center;
   color: var(--title-color);
 }
 .barbers-desc {
   margin-bottom: 30px;
   font-size: 14px;
   line-height: calc(19 / 14);
-  text-align: center; 
+  text-align: center;
   letter-spacing: 0.02em;
   color: var(--accent);
 }
 .barbers-social {
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+}
+.barbers-social li {
+  width: 44px;
+  height: 44px;
 }
 .social-item {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: var(--total-white);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.social-icon {
+  width: 20px;
+  height: 20px;
+  fill: var(--title-color);
+}
+.social-item:is(:hover, :focus) > .social-icon {
+  fill: var(--accent);
 }
 
 /*======== PORTFOLIO ========*/
