--- a/css/style.css
+++ b/css/style.css
@@ -174,15 +174,15 @@ img {
   width: 100px;
   display: flex;
   align-items: flex-end;
+  padding-left: 27px;
+  padding-bottom: 40px;
 }
 .hero-socials {
   display: flex;
   gap: 40px;
-  margin-bottom: 40px;
+  align-items: center;
   transform: rotate(0.75turn);
   transform-origin: left;
-  margin-left: 27px;
-  align-items: center;
 }
 .hero-socials::before {
   content: "";
