--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@
   --total-white: #ffffff;
   --grey-transparency: #9da4bd1f;
   --backdrop-backgroung: rgba(23, 26, 36, 0.432);
+  --mobil-menu-backdrop-background: rgba(25, 28, 38, 0.2);
   --bg-gradient: linear-gradient(rgba(25, 28, 38, 0.2), rgba(25, 28, 38, 0.2));
 }
 /*======== GENERAL ========*/
@@ -58,7 +59,7 @@ img {
   padding-bottom: 120px;
 }
 .container {
-  width: 1200px;
+  width: 100%;
   padding-left: 15px;
   padding-right: 15px;
   margin: 0 auto;
@@ -123,20 +124,152 @@ img {
 .header {
   position: absolute;
   width: 100%;
-  padding-top: 32px;
+  padding-top: 40px;
+  /* padding-top: 32px; */
 }
 .header-container {
   display: flex;
+  justify-content: space-between;
   align-items: center;
 }
 .logo {
-  margin-right: 130px;
+  /* margin-right: 130px; */
 }
 .logo-icon {
   display: block;
   fill: var(--title-color);
 }
-.nav-list {
+.header-nav,
+.header-phone,
+.header-btn {
+  display: none;
+}
+.menu-open-btn {
+  padding: 0;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  transition: background-color 300ms linear;
+}
+.menu-open-btn:is(:hover, :focus) {
+  background-color: var(--accent);
+}
+.burger-icon {
+  display: block;
+  width: 40px;
+  height: 40px;
+  fill: var(--total-white);
+}
+
+.mob-menu-backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: var(--mobil-menu-backdrop-background);
+  transition: opacity 300ms linear, visibility 300ms linear;
+}
+.mob-menu-backdrop.is-hidden {
+  pointer-events: none;
+  opacity: 0;
+  visibility: hidden;
+}
+.mobil-menu {
+  position: absolute;
+  top: 0;
+  right: 0;
+  max-width: 337px;
+  width: 100%;
+  height: 100%;
+  padding: 48px 30px 0 40px;
+  background-color: var(--total-white);
+  transform: scale(1);
+  transition: transform 300ms linear;
+}
+.mob-menu-backdrop.is-hidden .mobil-menu {
+  transform: scale(0.5);
+}
+.menu-close-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  margin-left: auto;
+  margin-bottom: 30px;
+  background-color: transparent;
+  border-radius: 4px;
+  border: none;
+  transition: fill 300ms linear, background-color 300ms linear;
+}
+.menu-close-btn:is(:hover, :focus) {
+  fill: var(--total-white);
+  background-color: var(--accent);
+}
+.menu-close-icon {
+  width: 18px;
+  height: 18px;
+}
+.menu-nav {
+  margin-bottom: 64px;
+}
+.menu-link {
+  font-weight: 600;
+  font-size: 18px;
+  line-height: calc(25 / 18);
+  letter-spacing: 0.1em;
+  color: var(--title-color);
+  transition: color 300ms linear;
+}
+.menu-link:is(:hover, :focus) {
+  color: var(--accent);
+}
+.menu-nav-item:not(:last-child) {
+  margin-bottom: 24px;
+}
+.mob-menu-phone {
+  text-transform: uppercase;
+  margin-bottom: 20px;
+}
+.mob-menu-btn {
+  min-width: 194px;
+  margin-bottom: 68px;
+  color: var(--title-color);
+}
+.modal-menu-socials {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+.menu-social-item {
+  display: flex;
+  gap: 40px;
+  align-items: center;
+}
+.menu-social-item::before {
+  content: "";
+  width: 60px;
+  height: 1px;
+  background-color: currentColor;
+  stroke: transparent;
+}
+.menu-social-item:last-child::before {
+  visibility: hidden;
+}
+.modal-menu-social {
+  font-weight: 600;
+  font-size: 14px;
+  line-height: calc(19 / 14);
+  letter-spacing: 0.2em;
+  color: var(--title-color);
+  transition: color 300ms linear;
+}
+.modal-menu-social:is(:hover, :focus) {
+  color: var(--accent);
+}
+
+/* .nav-list {
   display: flex;
   gap: 30px;
 }
@@ -160,7 +293,7 @@ img {
 }
 .header-link:is(:hover, :focus) {
   color: var(--accent);
-}
+} */
 
 /*======== HERO ========*/
 
@@ -581,6 +714,9 @@ img {
 
 /*======== MODAL ========*/
 
+.modal-open {
+  overflow: hidden;
+}
 .backdrop {
   position: fixed;
   top: 0;
