--- a/css/media.css
+++ b/css/media.css
@@ -1,6 +1,6 @@
 @media screen and (min-width: 480px) {
   .container {
-    max-width: 450px;
+    max-width: 480px;
   }
   .hero {
     background-image: var(--bg-gradient), url(../images/mobil-slider-img\ 3.jpg);
@@ -27,7 +27,121 @@
 
 @media screen and (min-width: 768px) {
   .container {
-    max-width: 768px;
+    max-width: 720px;
+  }
+  .header {
+    top: 32px;
+  }
+  .logo-icon {
+    fill: var(--title-color);
+  }
+  .menu-open-btn {
+    display: none;
+  }
+  .nav-list {
+    display: flex;
+    gap: 20px;
+  }
+  .header-nav {
+    display: block;
+  }
+  .header-link {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    font-weight: 600;
+    font-size: 12px;
+    line-height: normal;
+    letter-spacing: 1.2px;
+    color: var(--total-white);
+    transition: color 300ms linear;
+  }
+  .header-link:is(:hover, :focus) {
+    color: var(--accent);
+  }
+  .header-phone-thumb {
+    position: relative;
+  }
+  .header-phone {
+    display: block;
+    position: absolute;
+    top: 60px;
+    margin-left: 19px;
+    font-size: 12px;
+    font-weight: 600;
+    line-height: normal;
+    letter-spacing: 1.2px;
+    color: var(--total-white);
+  }
+  .header-btn {
+    display: block;
+    color: var(--total-white);
+  }
+  .hero {
+    background-image: none;
+  }
+  .left-side {
+    width: 117px;
+    display: flex;
+    align-items: flex-end;
+    padding-left: 36px;
+    padding-bottom: 40px;
+  }
+  .hero-socials {
+    display: flex;
+    gap: 40px;
+    align-items: center;
+    transform: rotate(0.75turn);
+    transform-origin: left;
+  }
+  .hero-socials::before {
+    content: "";
+    width: 60px;
+    height: 1px;
+    background-color: currentColor;
+  }
+  .right-side {
+    width: 100%;
+    height: 680px;
+    background-image: var(--bg-gradient), url(../images/tab-slide-1.webp);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+  }
+  .hero-content {
+    width: 360px;
+    padding-top: 272px;
+    padding-left: 98px;
+  }
+  .hero-slogan {
+    min-width: 360px;
+    font-size: 18px;
+    line-height: calc(30 / 18);
+    letter-spacing: 0.36px;
+  }
+  .about {
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
+  .about-container {
+    display: flex;
+    gap: 30px;
+  }
+  .about-imgs {
+    min-width: 330px;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+  }
+  .about-content {
+    width: 330px;
+  }
+  .about-slogan {
+    font-size: 18px;
+    line-height: calc(30 / 18);
+    letter-spacing: 0.36px;
+  }
+  .about-text {
+    margin-bottom: 77px;
   }
 }
 
